# TenderScore

./: .env.example  .gitignore  ADR-000-template.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260610_0001_platform_audit_spine.py  20260610_0002_jobs_registry_tenant_tables.py
backend/app/: __init__.py  main.py
backend/app/anonymisation/: README.md  __init__.py  models.py  router.py  service.py
backend/app/audit/: README.md  __init__.py  hashing.py  middleware.py  models.py  recorder.py  router.py  verifier.py
backend/app/auth/: README.md  __init__.py  admin_router.py  deps.py  models.py  passwords.py  provider.py  roles.py  router.py  service.py
backend/app/compliance/: README.md  __init__.py  router.py  service.py
backend/app/core/: __init__.py  config.py  db.py  hardening.py  hashing.py
backend/app/documents/: README.md  __init__.py  jobs.py  router.py  service.py
backend/app/framework/: README.md  __init__.py  models.py  router.py  service.py
backend/app/ingestion/: README.md  __init__.py  injection_scan.py  jobs.py  models.py  parsers.py  router.py  service.py  splitter.py  storage.py
backend/app/jobs/: README.md  __init__.py  models.py  queue.py  runner.py  worker.py
backend/app/llm_gateway/: README.md  __init__.py  adapters.py  gateway.py  models.py  registry.py  safety.py
backend/app/moderation/: README.md  __init__.py  models.py  router.py  service.py
backend/app/scoring/: README.md  __init__.py  engine.py  jobs.py  models.py  orchestrator.py  replay.py  router.py  schema.py  validation.py
backend/app/tenancy/: README.md  __init__.py  bootstrap.py  models.py  schema.py  service.py
backend/prompts/: README.md  framework_extraction_v1.yaml  injection_classifier_v1.yaml  score_question_v1.yaml
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_anonymisation.py  test_audit_api.py  test_audit_chain.py  test_audit_completeness.py  test_audit_immutability.py  test_auth_flow.py  test_bootstrap.py  test_framework.py  test_gateway.py  test_hardening.py  test_ingestion.py  test_rbac.py  test_registry.py  test_tenancy.py
backend/tests/redteam/: README.md  test_injection_defences.py
backend/tests/redteam/corpus/: attacks.yaml
backend/tests/regression/: README.md  test_synthetic_tender.py
backend/tests/regression/fixtures/synthetic_tender_01/: bidders.yaml  framework.yaml  oracle.yaml
backend/tests/regression/fixtures/synthetic_tender_01/submissions/: gate_failer.txt  mid.txt  strong.txt  weak.txt
backend/tests/support/: fake_llm.py  synthetic.py
backend/tests/unit/: test_config.py  test_hashing.py  test_health.py  test_passwords.py  test_provider_safety.py  test_tenancy_naming.py
docs/: BUILD_HANDOVER.md  architecture.md  milestones.md  variance-report.md
docs/adr/: ADR-001-stack.md  ADR-002-audit-chain.md  ADR-003-tenant-schema-migrations.md
docs/runbooks/: backup-restore.md  pen-test-prep.md
docs/security/: asvs-l2-self-assessment.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/api/: README.md  client.ts  types.ts
frontend/src/app/: App.tsx
frontend/src/components/: README.md
frontend/src/features/: README.md
frontend/src/features/auth/: LoginForm.tsx
frontend/src/features/moderation/: ModerationQueue.tsx  RecommendationView.tsx
frontend/src/features/procurements/: ProcurementList.tsx
frontend/tests/: App.test.tsx  LoginForm.test.tsx  Moderation.test.tsx  helpers.ts
