[project]
name = "tenderscore-backend"
version = "0.1.0"
description = "TenderScore API and worker — AI scores, humans moderate, AI documents."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.6",
    "bcrypt>=4.2",
    "pyotp>=2.9",
    "boto3>=1.35",
    "pypdf>=5.1",
    "python-docx>=1.1",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "reportlab>=4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "boto3-stubs[s3]>=1.35",
    "types-pyyaml>=6.0",
    "types-reportlab>=4.2",
    "python-multipart>=0.0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "N",    # pep8-naming
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# Asserts are the point of tests; fixture credentials are synthetic by rule.
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
